--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.db-*
 *.sass-cache
 *.orig
+*.json
 config/config.ini
 static/dist/
 node_modules/
@@ -13,4 +14,3 @@ src/
 _build
 _build_html
 beehive.*
-spawns.json
